fix: increase spacing in form

--- a/ct_registration/static/css/all.css
+++ b/ct_registration/static/css/all.css
@@ -99,6 +99,9 @@ table .thead-dark th {
     background-color: red;
 }
 
+.form-group {
+    margin-bottom: 2em !important;
+}
 
 /*==================== 
 	Footer 
